@@ -1,6 +1,7 @@
 2015-04-18  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
 
-	* coders/png.c (ReadMNGImage): Fix Coverity 55862 "Resource leak".
+	* coders/png.c (ReadMNGImage): Fix Coverity 55862 "Resource leak"
+	and quiet Coverity 55825, 55826, and 55827 "Data race condition".
 
 2015-04-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
